--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <body>
         <div class="container">
          <div class="todo app">
-            <h3>to do list <img src="./images/icon.png.jpg " width="10px" height="10px"></h3>
+            <h3 style="color: white;font-size: 32;font-weight: bold;text-align: center;">To do List <img src="./images/icon.png.jpg " width="30px" height="30px"></h3>
             <div class="row">
                 <input type="text" id="input-box" placeholder="add your text">
                 <button onclick="addTask()">Add</button>
             </div> 
-            <ul id="list-container">
+            <ul id="list-container" style="width: 50%;margin-left: 25%;color: white;">
                 <!-- <li class="checked">task1</li>
                 <li>task2</li>
                 <li>task3</li>
